# diagram_generator

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  README.md  docker-compose.yml  graph_structure.py  mcp_graph_server.py  pyproject.toml
PRPs/: langgraph-diagram-agent.md
diagram_agent/: __init__.py
diagram_agent/agents/: __init__.py
diagram_agent/config/: settings.py
diagram_agent/core/: models.py
diagram_agent/tools/: __init__.py
docker/: Dockerfile  docker-compose.yml
examples/: README.md  basic_web_application.py  llm_tool_call_simulation.py  microservices_architecture.py
microservices/diagram_agent/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
microservices/diagram_agent/agents/: __init__.py  diagram_agent.py  prompts.py
microservices/diagram_agent/api/: __init__.py  endpoints.py
microservices/diagram_agent/config/: __init__.py  logger.py  settings.py
microservices/diagram_agent/core/: __init__.py  graph_structure.py  models.py
microservices/diagram_agent/tests/: __init__.py  test_integration.py
microservices/diagram_agent/tools/: __init__.py  graph_tools.py
microservices/mcp_server/: README.md  __init__.py  graph_structure.py  mcp_graph_server.py  pyproject.toml
