[project]
name = "mcp-graph-server"
version = "0.1.0"
description = "MCP server for graph construction tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diagrams>=0.24.4",
    "pydantic>=2.5.0",
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.7",
    "mypy>=1.7.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true